--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,13 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.3"
+    implementation "org.koin:koin-android:2.2.2"
+
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    apply plugin: 'com.android.application'
+    apply plugin: 'com.google.gms.google-services'
 }
