--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.BookShare">
 
         <activity
-            android:name="com.example.bookshare.presentation.ui.activity.MainActivity"
+            android:name="com.example.bookshare.presentation.activity.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
