--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.bookshare"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -64,7 +64,7 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.4"
 
 
-    //Firebase
+    //Firebase back-end
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
@@ -72,7 +72,7 @@ dependencies {
     apply plugin: 'com.android.application'
     apply plugin: 'com.google.gms.google-services'
 
-    // Koin
+    // Koin DI
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-android-ext:$koin_version"
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
@@ -83,4 +83,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.fragment:fragment-ktx:1.3.2"
 
+    // Timber for logs
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
