--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
 
     // Timber for logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
