--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.bookshare"
+        applicationId "com.aliyoungprog"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -37,11 +37,15 @@ android {
     buildFeatures {
         dataBinding true
     }
+lintOptions {
+        checkReleaseBuilds false
+    }
 }
 ext{
     nav_version = "2.3.4"
     koin_version= "3.0.1-beta-2"
 }
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -56,6 +60,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 
     // Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.4"
@@ -89,7 +94,6 @@ dependencies {
     // Timber for logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
 
