--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bookshare">
+    package="com.aliyoungprog">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:name=".domain.App"
+        android:name="com.aliyoungprog.domain.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_booklover"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/BookShare">
-        <activity android:name=".presentation.activity.LoginActivity"
+        <activity android:name="com.aliyoungprog.presentation.activity.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +23,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.activity.MainActivity"
+            android:name="com.aliyoungprog.presentation.activity.MainActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".presentation.activity.RegistrationActivity"
+            android:name="com.aliyoungprog.presentation.activity.RegistrationActivity"
             android:screenOrientation="portrait">
         </activity>
 
